app_site/streaming/static/streaming/style.css
body{
	background-color: #1a1a1a;
}

a {
	color: #ffd700;
	text-decoration: none;
}

a:hover{
	color: #fffafa;
}

li{
	list-style: none;
	text-align: left;
	padding-bottom: 20px;
}

header{
	text-align: center;
    font-size: 30px;
    color: #ffd700;
    font-family: Raleway;
    padding: 15px 50px;
}

section {
	padding-bottom: 30px;
	float: right;
	margin: 0 1.5%;
	width: 63%;
}

aside{
	float: left;
	margin: 0 1.5%;
	width: 30%;
}

fieldset{
	border-radius: 10px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	margin: 0px 0px 10px 0px;
	border: 1px solid #ffd700;
	padding-left: 35px;
	padding-right: 35px;
}

legend{
	color: #393e46;
	background: #ffd700;
	padding: 0 8px 3px 8px;
	font-weight: normal;
	font-size: 22px;
}

span{
	color: #fffafa;
}

p{
    font-size: 16px;
    color: #ffd700;
    font-family: Raleway;
	padding-bottom: 10px;
}

h1{
    font-size: 20px;
    color: #ffd700;
    font-family: Raleway;
}

article{
    /*background-color: #111;*/
	margin:40px;
	padding:10px;
    font-family: Raleway;
}

hr {
	margin-top: 20px;
	margin-bottom: 20px;
  	border: 1px solid #ffd700;
}

#photo{
	height: 100%;
	width: 100%;
}

#friendsList{
	-webkit-transition-duration: 0.2s;
	transition-duration: 0.2s;
}

#friendsList:hover{
	font-size: 20px;
	text-decoration: none;
}

#search{
	margin-left: 40px;
	color: #fffafa;
}

#friendsSearch{
	margin: 0;
	width: 50%;
	padding-left: 40px;
	padding-bottom: 40px;
}

#bio, #fav_movies, #fav_shows{
	width: 70%;
	height: 100px;
}

nav{
	background: #111;
	padding: 15px 20px 0 20px;
	color: #1a1a1a;
    font-size: 18px;
    font-family: Oswald;
	width: 97%;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 14px 4px;
  overflow: hidden;
}

nav li {
	float: left;
	padding-left: 10px;
}

nav a {
    text-align: center;
    padding: 20px 20px;
    text-decoration: none;
    color: #fffafa;
}

nav a:hover {
    background-color: #ffd700;
    color: #1a1a1a;
}

nav a.active {
  background-color: #4CAF50;
  color: white;
}

.center {
	text-align: center;
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
}

.profile-style img{
	float: left;
	width: 200px;
	height: 200px;
}

.profile-style header{
	text-align: left;
	padding-bottom: 0;
	left: 20px;
	top: 80px;
	position: relative;
}

.profile-style p{
	padding-left: 50px;
	color: #fffafa;
	font-size: 20px;
	left: 20px;
	top: 80px;
	position: relative;
}

.media-style{
	text-align: center;
	display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-auto-rows: 25vw;
    grid-gap: 15px;
	font-size: 17px;
}

.media-style a:hover{
	text-decoration: underline;
	color: #fffafa;
}

.media-style img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.rating{
	width: 101.3%;
	display: block;
}

.rating > input{
	display: none;
}

.rating > label:before{
	content: "★";
	font-size: 40px;
}

.rating > label{
	color: #fffafa;
	float: right;
}

.rating > input:checked ~ label{
	color: #ffd700;
}

.rating > input:hover ~ label{
	color: #ffd700;
}

.form-style{
	font-family: Raleway;
    width: 60%;
	margin: 0 auto;
}

.form-style header{
    font-size: 30px;
    font-weight: bolder;
    color: #fffafa;
}

.form-style label{
	text-align: center;
	color: #fffafa;
	font-size: 18px;
}

.form-style h1{
    font-size: 13px;
    color: red;
}

.form-style h2,
h2{
	font-size: 13px;
	color: #fffafa;
}

.form-style textarea{
	width:250px;
	height:100px;
}

.form-style input[type=text],
.form-style input[type=password],
.form-style input[type=email],
.form-style select,
.form-style textarea{
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border: 1px solid #8b8989;
	outline: none;
	color: #393e46;
	padding: 5px 8px 5px 8px;
	background: #fffafa;
	width:60%;
    font-size: 14px;
}

.form-style  input[type=submit],
.form-style  input[type=button]
{
	background: #ffd700;
	border: 1px solid #393e46;
	padding: 5px 15px 5px 15px;
	color: #1a1a1a;
    font-size: 15px;
}

.form-style  input[type=submit] {
	-webkit-transition-duration: 0.4s;
	transition-duration: 0.4s;
}

.form-style  input[type=submit]:hover{
	background-color: #1a1a1a;
	color: #fffafa;
	border: 1px solid #fffafa;
}

.form-style a{
	color: #fffafa;
	-webkit-transition-duration: 0.4s;
	transition-duration: 0.4s;
}

.form-style a:hover{
	color: #ffd700;
}

.stars-outer {
  display: inline-block;
  position: relative;
  font-family: Raleway;
}
 
.stars-outer::before {
  content: "☆☆☆☆☆";
}
 
.stars-inner {
  position: absolute;
  top: 0;
  left: 0;
  white-space: nowrap;
  overflow: hidden;
  width: 0;
}
 
.stars-inner::before {
  content: "★★★★★";
  /*color: #f8ce0b;*/
}

